fix header alignment

--- a/src/app/wave-visualization/wave-visualization.component.scss
+++ b/src/app/wave-visualization/wave-visualization.component.scss
@@ -1,3 +1,7 @@
+* {
+  font-family: sans-serif;
+}
+
 button {
   font-size: 14px;
   border: none;
@@ -152,18 +156,32 @@ wave::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-section.playback {
+.header {
   display: flex;
   align-items: center;
+  height: 100px;
 
   .playback-time {
-    width: 50px;
+    width: 30px;
+    margin-right: 10px;
   }
 
-  ng5-slider {
+  .zoom-container {
     flex: 1;
-    max-width: 500px;
-    margin-top: -20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    ng5-slider {
+      flex: 1;
+      max-width: 500px;
+      margin-top: 0;
+    }
+
+    .zoom-label {
+      font-weight: bold;
+      margin-right: 20px;
+    }
   }
 
   button {
